<resources>
    <string name="app_name">Cuts’N’Plows</string>
    <string name="create_account_with_email">Create account with email</string>
    <string name="signup_with_facebook">Signup with facebook</string>
    <string name="welcome_title">Welcome to cuts’n’plows</string>
    <string name="welcome_description">Sign in now and you will be able to connect with verified lawn and snow removal service vendors near you!</string>
    <string name="required_signup_text">Don’t have an account?\nSign up?</string>
    <string name="sign_in">Sign in</string>
    <string name="remember_me_and_keep_me_logged_in">Remember me and keep me logged in.</string>
    <string name="reset_password_question">Reset password?</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="we_hope_you_ve_been_enjoying_our_services">We hope you’ve been enjoying our services.</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="let_s_get_started">Let’s Get Started!</string>
    <string name="registration_description">Signup now and you will be able to connect with verified lawn and snow removal service vendors near you!</string>
    <string name="number_placeholder">345 987 65 43</string>
    <string name="terms_and_condition_check">By signing you agree to the Terms and Conditions</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in_question">Sign in?</string>
    <string name="sign_up">Sign up</string>
    <string name="forgot_password">Forgot password</string>
    <string name="forget_password_description">Enter your email and we’ll send you\ninstructions on how to reset your password.</string>
    <string name="reset_password">Reset password</string>
    <string name="date">Date</string>
    <string name="budget">Budget</string>
    <string name="status">Status</string>
    <string name="get_roles_heading">Select Your Role in Cuts’n’Plows</string>
    <string name="proceed">Proceed</string>
    <string name="customer">Customer</string>
    <string name="service_provider">Service Provider</string>
    <string name="update_profile">Update Profile</string>
    <string name="subscription">Subscription</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="about_us">About Us</string>
    <string name="logout">Logout</string>
    <string name="copy_right_text">©cuts’n’plows 2020</string>
    <string name="splash_description">Need a Cut of your lawn or a Plow of your driveway? Sign up now and you will be able to connect with verified lawn and snow removal service vendors near you!</string>
    <string name="cuts_n_plows">cuts’n’plows</string>
    <string name="submit">Submit</string>
    <string name="old_password">Old Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="new_password">New Password</string>
    <string name="password">Password</string>
    <string name="update_password">Update password</string>
    <string name="enter_your_first_name">Enter your first name</string>
    <string name="enter_your_last_name">Enter your last name</string>
    <string name="enter_bio_title">Enter details about yourself</string>
    <string name="enter_bio">Enter bio</string>
</resources>