<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
android:padding="15dp"
    android:background="@drawable/dialog_background">

    <TextView
        android:id="@+id/title_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold_700"
        android:text="@string/enter_bio_title"
        android:textAlignment="textStart"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/enter_bio_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_text_view"
        android:background="@drawable/bio_edit_text_bg"
        android:fontFamily="@font/poppins_light300"
        android:layout_marginTop="20dp"
        android:gravity="start|top"
        android:hint="@string/enter_bio"
        android:minLines="3"
        android:padding="10dp"
        android:textAlignment="gravity"
        android:textColor="@color/green"
        android:textSize="14sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/submitButton"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/enter_bio_edit_text"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:backgroundTint="@color/green"
        android:fontFamily="@font/poppins_light300"
        android:layout_marginBottom="10dp"
        android:paddingStart="30dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:text="@string/submit"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:cornerRadius="30dp"
        app:strokeColor="@color/white"
        app:strokeWidth="1dp" />

</RelativeLayout>