<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/parentLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green"
        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/rolesHeadingTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:fontFamily="@font/poppins_light300"
            android:text="@string/get_roles_heading"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/customerRoleButton"
            android:layout_width="150dp"
            android:layout_height="160dp"
            android:layout_marginTop="32dp"
            android:drawableTop="@drawable/ic_role_home"
            android:fontFamily="@font/poppins_light300"
            android:paddingTop="30dp"
            android:paddingBottom="20dp"
            android:text="@string/customer"
            android:textAllCaps="false"
            android:textSize="14sp"
            app:cornerRadius="100dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rolesHeadingTextView"
            app:strokeColor="@color/light_green"
            app:strokeWidth="2dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/serviceProviderButton"
            android:layout_width="150dp"
            android:layout_height="160dp"
            android:layout_marginTop="32dp"
            android:drawableTop="@drawable/app_icon_small"
            android:fontFamily="@font/poppins_light300"
            android:paddingTop="10dp"
            android:paddingBottom="20dp"
            android:text="@string/service_provider"
            android:textAllCaps="false"
            android:textSize="14sp"
            app:cornerRadius="100dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/customerRoleButton"
            app:strokeColor="@color/light_green"
            app:strokeWidth="2dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/proceedButton"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="24dp"
            android:backgroundTint="@color/light_green"
            android:fontFamily="@font/poppins_light300"
            android:paddingStart="30dp"
            android:paddingTop="12dp"
            android:paddingEnd="15dp"
            android:paddingBottom="12dp"
            android:text="@string/proceed"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="normal"
            app:cornerRadius="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/serviceProviderButton"
            app:strokeColor="@color/white"
            app:strokeWidth="1dp" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>